Modify author name and email in package.json for updated contact information

--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "keywords": [
     "todo",
     "list",
-    "todolist"
+    "todo list"
   ],
   "author":{
-    
+    "name": "Avinash Kumar",
+    "email": "avinashbuddy01@gmail.com"
   },
   "license": "ISC",
   "bugs": {
