--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -33,9 +34,8 @@
     ]
   },
   "devDependencies": {
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
     "@babel/eslint-parser": "^7.25.9",
+    "@eslint/js": "^9.13.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -43,10 +43,11 @@
     "@types/node": "^16.18.115",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@eslint/js": "^9.13.0",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.11.0",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.9.5",
     "typescript-eslint": "^8.11.0"
   }
 }
